# solardawn-hacksi

./: .gitignore  AUTHORS  Makefile.am  README  README.md  configure.in
doc/C/: Makefile.am
pixmaps/: Makefile.am
src/: Makefile  Makefile.am  main.c  solardawn.c  solardawn.h
src/database/: Makefile  solardawndb.c  solardawndb.h
src/hardware/: Makefile  current.py  hardwaretest.c  hardwaretest.h  random.c  random.h
src/networking/: Makefile  data.h  message.h  peer  peer.c  peer.h  temp.txt  tracker  tracker.c  watcher  watcher.c  watcher.h
src/ui/: #buy_power.ui#  Makefile  buypower.ui  info.ui  main.c  main.ui  meson.build  org.gtk.solardawnapp.gschema.xml  solardawnapp.c  solardawnapp.gresource.xml  solardawnapp.h  solardawnappbuypower.c  solardawnappbuypower.h  solardawnappenterinfo.c  solardawnappenterinfo.h  solardawnappinit.c  solardawnappinit.h  solardawnappprefs.c  solardawnappprefs.h  solardawnappwin.c  solardawnappwin.h  window.ui
src/ui/backup/: info.glade  prefs.ui  solardawnappwin.c.bak  window.glade  window.ui.bak
src/ui/ui_files/: solardawnapp.gresource.xml  window.ui
ui/: main.ui
